# lib/db/src/schema/index.ts
@@ -2,3 +2,4 @@ export * from "./applications";
 export * from "./job_alerts";
 export * from "./gmail_sync";
 export * from "./scam_rules";
+export * from "./notifications";
